--- a/src/scripts/conservatory/details/marker-window.html
+++ b/src/scripts/conservatory/details/marker-window.html
@@ -1,4 +1,4 @@
-<div class="mapWindow">
+<div class="map-window">
     <div class="conservatory-details">
         <p><b ng-bind="parameter.category"></b></p>
         <p ng-bind="parameter.street"></p>
